feat : Creando las páginas principales ( Layout principal para todas las vistas y header principal )

--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -1,5 +1,14 @@
-h1 Agencia de Viajes  <!-- Esto permite imprimir texto plano tipo html -->
-p Inicio
-<!-- Esto permite imprimir el valor de una variable en el HTML -->
-p= viajes
-p #{viajes}
+//- h1 Agencia de Viajes  <!-- Esto permite imprimir texto plano tipo html -->
+//- p Inicio
+//- <!-- Esto permite imprimir el valor de una variable en el HTML -->
+//- p= viajes
+//- p #{viajes}
+
+extends ./layout/index
+
+block contenido
+    p Inicio
+
+
+
+
