--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -3,5 +3,13 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        title Agencia de Viajes
+        link(rel="stylesheet", href="/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/style.css")
+        link(href='https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&familiy=Staatliches&display=swap' rel='stylesheet')
     body
+        include header
+        block contenido
+
+
+        include footer
