--- a/views/nosotros.pug
+++ b/views/nosotros.pug
@@ -1,6 +1,12 @@
-h1 Hola desde Nosotros <!-- Esto permite imprimir texto plano tipo html -->
-p Nosotros
+//- h1 Hola desde Nosotros <!-- Esto permite imprimir texto plano tipo html -->
+//- p Nosotros
 
-<!-- Esto permite imprimir el valor de una variable en el HTML -->
-p= viajes
-p #{viajes}
+//- <!-- Esto permite imprimir el valor de una variable en el HTML -->
+//- p= viajes
+//- p #{viajes}
+
+extends ./layout/index
+
+block contenido
+    p Nosotros
+
