--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -7,6 +7,6 @@ header
                         img(src="/img/logo.svg", alt="imagen sitio logotipo")
                 .col-md-8
                         nav.mt-5.mt-md-0.nav.justyfy-content-center.justify-content-md-end
-                            a.nav-link(href="nosotros") Nosotros
-                            a.nav-link(href="viajes") Viajes
-                            a.nav-link(href="testimoniales") Testimoniales
+                            a.nav-link(href="/nosotros") Nosotros
+                            a.nav-link(href="/viajes") Viajes
+                            a.nav-link(href="/testimoniales") Testimoniales
