feat : Añadiendo el formulario para los testimoniales y la ruta con su controlador para leer el formulario

--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -2,5 +2,26 @@ extends ./layout/index
 
 block contenido
     main.container.mt-5
-        .row
-            h1 #{pagina}
+            h1.text-center.mt-5 #{pagina}
+            .row
+
+                h2.d-block.w-100.text-center Agrega un Testimonial
+
+
+
+                .row.justify-content-center.col
+                    .col-md-8
+                        form(action="/testimoniales" method="POST")
+                            .form-group
+                                label(for="nombre") Nombre:
+                                input#nombre(type="text", placeholder="Tu Nombre", name="nombre", class="form-control")
+
+                            .form-group
+                                label(for="correo") Correo Electrónico:
+                                input#email(type="email", placeholder="Tu Email", name="correo", class="form-control")
+
+                            .form-group
+                                label(for="mensaje") Mensaje:
+                                textarea#mensaje(name="mensaje", cols=30, rows=3, class="form-control", placeholder="Escribe Tu Mensaje" )
+
+                            input.btn.btn-success.btn-block(type="submit")
