--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -4,24 +4,26 @@ block contenido
     main.container.mt-5
             h1.text-center.mt-5 #{pagina}
             .row
+                .col-md-12
+                    h2.d-block.w-100.text-center Agrega un Testimonial
 
-                h2.d-block.w-100.text-center Agrega un Testimonial
-
-
+                    if(errores)
+                        each error in errores
+                            .alert.col.alert-danger.text-center= error.mensaje
 
                 .row.justify-content-center.col
                     .col-md-8
                         form(action="/testimoniales" method="POST")
                             .form-group
                                 label(for="nombre") Nombre:
-                                input#nombre(type="text", placeholder="Tu Nombre", name="nombre", class="form-control")
+                                input#nombre(type="text", placeholder="Tu Nombre", name="nombre", class="form-control", value=nombre)
 
                             .form-group
                                 label(for="correo") Correo Electrónico:
-                                input#email(type="email", placeholder="Tu Email", name="correo", class="form-control")
+                                input#email(type="email", placeholder="Tu Email", name="correo", class="form-control", value= correo)
 
                             .form-group
                                 label(for="mensaje") Mensaje:
-                                textarea#mensaje(name="mensaje", cols=30, rows=3, class="form-control", placeholder="Escribe Tu Mensaje" )
+                                textarea#mensaje(name="mensaje", cols=30, rows=3, class="form-control", placeholder="Escribe Tu Mensaje")=mensaje
 
                             input.btn.btn-success.btn-block(type="submit")
