--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -7,7 +7,8 @@ html(lang="es")
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
         link(href='https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&familiy=Staatliches&display=swap' rel='stylesheet')
-    body
+    body(class=clase)
         include header
+        block slider
         block contenido
         include footer
