feat: corregir rutas de imágenes en las vistas de viajes

--- a/views/layout/bloque_viajes.pug
+++ b/views/layout/bloque_viajes.pug
@@ -2,7 +2,7 @@
             each viaje in viajes
                 .col-md-6.col-lg-4.mb-4
                     .card
-                        img.card-img-top(src=`img/destinos_${viaje.imagen}.jpg`)
+                        img.card-img-top(src=`/img/${viaje.imagen}`)
 
                         .card-body
                             h2= viaje.titulo
