--- a/views/viaje.pug
+++ b/views/viaje.pug
@@ -4,7 +4,7 @@ block contenido
     main.container.mt-5
         .row
             .col-md-5
-                img(src=`/img/destinos_${viaje.imagen}_ln.jpg`, alt='imágen viaje', class="img-fluid")
+                img(src=`/img/${viaje.imagen}`, alt='imágen viaje', class="img-fluid")
             .col-md-7
                 h1 #{viaje.titulo}
                 p
